Fix build issues: GOOS mapping, assembly conflicts, and gosec action
- Fix GOOS=ubuntu-latest issue by properly mapping GitHub runner OS to GOOS values
- Resolve assembly function conflicts by splitting code with build tags
- Replace deprecated gosec action with direct installation
- Add missing OptimizedHashIndex methods (Size, BucketCount, ForEach)
- Simplify assembly code to use basic x86-64 instructions
- Ensure cross-compilation works for all platforms

Fixes:
- GOOS/GOARCH pair errors in CI
- Assembly function redefinition conflicts
- Missing gosec action repository
- Missing index methods causing build failures

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,9 +58,16 @@ jobs:
 
       - name: Build all binaries
         run: |
-          GOOS=${{ matrix.os }} GOARCH=${{ matrix.arch }} go build ./cmd/...
-          GOOS=${{ matrix.os }} GOARCH=${{ matrix.arch }} go build -o bin/throughput ./cmd/throughput
-          GOOS=${{ matrix.os }} GOARCH=${{ matrix.arch }} go build -o bin/throughput-optimized ./cmd/throughput_optimized
+          # Map GitHub runner OS to GOOS
+          if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
+            export GOOS=linux
+          elif [ "${{ matrix.os }}" = "windows-latest" ]; then
+            export GOOS=windows
+          elif [ "${{ matrix.os }}" = "macos-latest" ]; then
+            export GOOS=darwin
+          fi
+          export GOARCH=${{ matrix.arch }}
+          go build ./cmd/...
 
   # Unit tests matrix - runs in parallel across OS/arch combinations
   unit-tests:
@@ -226,9 +233,9 @@ jobs:
           cache: true
 
       - name: Run gosec security scanner
-        uses: securecodewarrior/github-action-gosec@master
-        with:
-          args: '-fmt sarif -out results.sarif ./...'
+        run: |
+          go install github.com/securecodewarrior/gosec/v2/cmd/gosec@latest
+          gosec -fmt sarif -out results.sarif ./...
 
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v2
