--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,24 +71,24 @@ jobs:
           name: codecov-umbrella
           fail_ci_if_error: false
 
-  benchmark:
-    name: Benchmark
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  # benchmark:
+  #   name: Benchmark
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
 
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: '1.24.6'
-          cache: true
+  #     - name: Set up Go
+  #       uses: actions/setup-go@v4
+  #       with:
+  #         go-version: '1.24.6'
+  #         cache: true
 
-      - name: Install dependencies
-        run: go mod download
+  #     - name: Install dependencies
+  #       run: go mod download
 
-      - name: Run benchmarks
-        run: go test -race -bench=. -benchmem -p=1 ./...
+  #     - name: Run benchmarks
+  #       run: go test -race -bench=. -benchmem -p=1 ./...
 
   security:
     name: Security Scan
@@ -164,12 +164,10 @@ jobs:
 
       - name: Run fuzz tests
         run: |
-          go test -fuzz=FuzzBasicOperations -fuzztime=30s ./tests/...
-          go test -fuzz=FuzzConcurrentOperations -fuzztime=30s ./tests/...
-          go test -fuzz=FuzzSnapshotOperations -fuzztime=30s ./tests/...
-          go test -fuzz=FuzzTransactionOperations -fuzztime=30s ./tests/...
-          go test -fuzz=FuzzRandomSequence -fuzztime=30s ./tests/...
-          go test -fuzz=FuzzEpochReclamation -fuzztime=30s ./tests/...
+          for fuzz_test in FuzzBasicOperations FuzzConcurrentOperations FuzzTransactionOperations FuzzSnapshotOperations FuzzEdgeCases FuzzLargeData FuzzStressTest; do
+            echo "Running fuzz test: $fuzz_test"
+            go test -fuzz=$fuzz_test -fuzztime=30s ./tests/fuzz_test.go
+          done
 
   property:
     name: Property-Based Testing
