--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,5 +1,7 @@
 # Licensed under the MIT License. See LICENSE file in the project root for details.
 
+version: 2
+
 run:
   timeout: 5m
   go: "1.24"
@@ -128,136 +130,11 @@ linters-settings:
           - TS
 
 linters:
-  enable:
-    # Security
-    - gosec
-    - gosimple
-    - govet
-    - ineffassign
-    - staticcheck
-    
-    # Performance
-    - prealloc
-    - wastedassign
-    
-    # Code quality
-    - errcheck
-    - unused
-    - deadcode
-    - varcheck
-    - structcheck
-    - typecheck
-    - goconst
-    - gocyclo
-    - cyclop
-    - dupl
-    - funlen
-    - gocognit
-    - gocritic
-    - gocognit
-    - gomnd
-    - gomoddirectives
-    - gomodguard
-    - goprintffuncname
-    - gosec
-    - gosimple
-    - govet
-    - ineffassign
-    - lll
-    - misspell
-    - nakedret
-    - noctx
-    - nolintlint
-    - prealloc
-    - predeclared
-    - revive
-    - rowserrcheck
-    - staticcheck
-    - stylecheck
-    - thelper
-    - tparallel
-    - typecheck
-    - unconvert
-    - unparam
-    - unused
-    - varcheck
-    - wastedassign
-    - whitespace
-    - wrapcheck
-    - wsl
-    
-    # Formatting
-    - gofmt
-    - goimports
-    - gofumpt
-    
-    # Documentation
-    - godot
-    - godox
-    - goheader
-    - gomnd
-    - gomoddirectives
-    - gomodguard
-    - goprintffuncname
-    - gosec
-    - gosimple
-    - govet
-    - ineffassign
-    - lll
-    - misspell
-    - nakedret
-    - noctx
-    - nolintlint
-    - prealloc
-    - predeclared
-    - revive
-    - rowserrcheck
-    - staticcheck
-    - stylecheck
-    - thelper
-    - tparallel
-    - typecheck
-    - unconvert
-    - unparam
-    - unused
-    - varcheck
-    - wastedassign
-    - whitespace
-    - wrapcheck
-    - wsl
-
+  enable-all: true
   disable:
-    # Disable some linters for performance-critical code
-    - gomnd # Magic numbers are acceptable in performance-critical code
-    - gocognit # Cognitive complexity is acceptable for complex algorithms
-    - cyclop # Cyclomatic complexity is acceptable for complex algorithms
-    - funlen # Function length is acceptable for complex algorithms
-    - lll # Line length is acceptable for long comments
-    - goconst # Constants are acceptable for performance-critical code
-    - dupl # Duplicate code is acceptable for similar algorithms
-    - gocritic # Some criticisms are acceptable for performance-critical code
-    - gomoddirectives # Module directives are acceptable
-    - gomodguard # Module guard is acceptable
-    - goprintffuncname # Printf function names are acceptable
-    - nakedret # Naked returns are acceptable for short functions
-    - noctx # Context is not always required
-    - nolintlint # Nolint lint is acceptable
-    - predeclared # Predeclared identifiers are acceptable
-    - rowserrcheck # Row error check is acceptable
-    - stylecheck # Style check is acceptable
-    - thelper # Test helper is acceptable
-    - tparallel # Test parallel is acceptable
-    - unconvert # Unconvert is acceptable
-    - unparam # Unused parameters are acceptable
-    - varcheck # Var check is acceptable
-    - wastedassign # Wasted assign is acceptable
-    - whitespace # Whitespace is acceptable
-    - wrapcheck # Wrap check is acceptable
-    - wsl # Whitespace linter is acceptable
-    - godot # Godot is acceptable
-    - godox # Godox is acceptable
-    - goheader # Go header is acceptable
-
+    - errcheck
+    - ineffassign
+    - staticcheck
 issues:
   exclude-rules:
     # Exclude some rules for performance-critical code
