--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,32 +39,57 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: [ '1.24.6' ]
-        os: [ ubuntu-latest, macos-latest ]
+        include:
+          - goarch: amd64
+            goamd64: '1'
+          - goarch: amd64
+            goamd64: '4'
+          - goarch: arm64
+            exec: /usr/bin/qemu-aarch64-static
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Go ${{ matrix.go-version }}
+      - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: ${{ matrix.go-version }}
+          go-version: '1.24.6'
           cache: true
 
       - name: Install dependencies
         run: go mod download
 
+      - name: Install QEMU
+        if: matrix.goarch == 'arm64'
+        run: sudo apt-get update && sudo apt-get install -y qemu-user-static
+
       - name: Run vet and tests
+        shell: bash
+        env:
+          GOOS: linux
+          GOARCH: ${{ matrix.goarch }}
+          GOAMD64: ${{ matrix.goamd64 }}
+          TEST_EXEC: ${{ matrix.exec }}
         run: |
           set -euo pipefail
-          make test
+          go vet ./...
+          go test ${TEST_EXEC:+-exec=${TEST_EXEC}} -race -p=1 ./...
 
       - name: Run tests with coverage
+        if: matrix.goarch == 'amd64' && matrix.goamd64 == '4'
+        shell: bash
+        env:
+          GOOS: linux
+          GOARCH: ${{ matrix.goarch }}
+          GOAMD64: ${{ matrix.goamd64 }}
+          TEST_EXEC: ${{ matrix.exec }}
         run: |
           set -euo pipefail
-          make test-coverage
+          go test ${TEST_EXEC:+-exec=${TEST_EXEC}} -race -coverprofile=coverage.out -covermode=atomic -p=1 ./...
+          go tool cover -func=coverage.out
 
       - name: Upload coverage to Codecov
+        if: matrix.goarch == 'amd64' && matrix.goamd64 == '4'
         uses: codecov/codecov-action@v4
         with:
           file: ./coverage.out
@@ -122,6 +147,14 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     needs: [lint, test]
+    strategy:
+      matrix:
+        include:
+          - goarch: amd64
+            goamd64: '1'
+          - goarch: amd64
+            goamd64: '4'
+          - goarch: arm64
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -136,6 +169,10 @@ jobs:
         run: go mod download
 
       - name: Build binaries
+        env:
+          GOOS: linux
+          GOARCH: ${{ matrix.goarch }}
+          GOAMD64: ${{ matrix.goamd64 }}
         run: |
           set -euo pipefail
           make build
@@ -143,7 +180,7 @@ jobs:
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: binaries
+          name: binaries-${{ matrix.goarch }}${{ matrix.goamd64 }}
           path: bin/
 
   fuzz:
