--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,11 +22,11 @@ jobs:
           go-version: '1.24.6'
           cache: true
 
+      - name: Install golangci-lint
+        run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@v2.1.6
+
       - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v4
-        with:
-          version: v2.1.6
-          args: --timeout=5m
+        run: golangci-lint run --timeout=5m
 
   test:
     name: Test
@@ -130,7 +130,7 @@ jobs:
         run: go mod download
 
       - name: Install gosec
-        run: go install github.com/securecodewarrior/gosec/v2/cmd/gosec@latest
+        run: go install github.com/securego/gosec/v2/cmd/gosec@latest
 
       - name: Run gosec security scanner
         run: gosec -fmt sarif -out results.sarif ./...
