refactor: implement modular Makefile system with automatic tool installation
- Create modular Makefile structure with Makefile.generic and Makefile.project
- Add automatic tool installation for each command (lint, security, vulncheck, format)
- Remove redundant vet command (covered by golangci-lint)
- Remove -p=1 flag for better test performance with parallel execution
- Add format command using goimports
- Remove Python dependencies (pre-commit, pip)
- Add comprehensive documentation in docs/MAKEFILE.md
- Fix ARM64 OptimizedHashIndex missing ForEach method
- Update golangci-lint configuration for v2 compatibility
- Each command installs only its own dependencies when needed

Benefits:
- Individual command responsibility
- Go-native only (no Python dependencies)
- Automatic tool installation
- Better performance with parallel test execution
- Reusable generic commands for other Go projects

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -27,7 +27,6 @@ linters-settings:
   
   # Code quality linters
   govet:
-    check-shadowing: true
     settings:
       shadow:
         strict: false
@@ -49,7 +48,7 @@ linters-settings:
   errcheck:
     check-type-assertions: true
     check-blank: true
-    ignore: fmt:.*
+    exclude-functions: fmt:.*
   
   # Unused code detection
   unused:
